--- a/README.html
+++ b/README.html
@@ -1076,14 +1076,13 @@ body .markdown-body
 <table border=0 >
     <tbody>
         <tr>
-            <td width="10%" align="center"> Original Image </td>
-            <td width="18%" > <img src="https://raw.githubusercontent.com/utkuozbulak/pytorch-cnn-visualizations/master/input_images/snake.jpg"> </td>
-            <td width="18%"> <img src="https://raw.githubusercontent.com/utkuozbulak/pytorch-cnn-visualizations/master/input_images/cat_dog.png"> </td>
-            <td width="18%"> <img src="https://raw.githubusercontent.com/utkuozbulak/pytorch-cnn-visualizations/master/input_images/spider.png"> </td>
-            <td width="18%"> <img src="https://raw.githubusercontent.com/utkuozbulak/pytorch-cnn-visualizations/master/input_images/spider.png"> </td>
-            <td width="18%"> <img src="https://raw.githubusercontent.com/utkuozbulak/pytorch-cnn-visualizations/master/input_images/spider.png"> </td>
+            <td width="10%" align="center"> Class Activation Mapping </td>
+            <td width="18%" > <img src="https://github.com/sysu-zjw/XAI-Project/blob/master/images/CAM/bike_0.jpg"> </td>
+            <td width="18%"> <img src="https://github.com/sysu-zjw/XAI-Project/blob/master/images/CAM/bike_1.jpg"> </td>
+            <td width="18%"> <img src="https://github.com/sysu-zjw/XAI-Project/blob/master/images/CAM/bike_2.jpg"> </td>
+            <td width="18%"> <img src="https://github.com/sysu-zjw/XAI-Project/blob/master/images/CAM/bike_3.jpg"> </td>
+            <td width="18%"> <img src="https://github.com/sysu-zjw/XAI-Project/blob/master/images/CAM/bike_4.jpg"> </td>
         </tr>
-
          <tr>
             <td>  </td>
             <td align="center"> Target class: King Snake (56) </td>
@@ -1092,7 +1091,6 @@ body .markdown-body
             <td align="center"> Target class: Spider (72)</td>
             <td align="center"> Target class: Spider (72)</td>
         </tr>
-
         <tr>
             <td width="10%" align="center"> Colored Vanilla Backpropagation </td>
             <td width="18%" > <img src="https://raw.githubusercontent.com/utkuozbulak/pytorch-cnn-visualizations/master/results/gradient_visualizations/snake_Vanilla_BP_color.jpg"> </td>
